<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingRight="7dp"
    android:paddingBottom="3dp"
    android:orientation="vertical" > 
  	<LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <ImageView
	        android:id="@+id/userImg"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:src="@drawable/tweet"
	        android:layout_marginLeft="5dp"
	        android:layout_marginTop="5dp"
		    android:contentDescription="@string/app_name" />
	
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginLeft="10dp"
	        android:gravity="left" >
	
	        <TextView
	            android:id="@+id/userScreen"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/header"
	            android:textSize="19sp"
		        android:clickable="true"
	            android:textColor="#222222"
	            android:textStyle="bold" />
	
	        <TextView
	            android:id="@+id/updateText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/body"
	            android:layout_marginTop="5dp"
	            android:ellipsize="end"
	            android:lines="5"
		    	android:autoLink="all"
		    	android:textColorLink="@color/control_one"
	            android:textColor="#666666"                                                
	            android:textSize="14sp" />
	
	        <TextView
	            android:id="@+id/updateTime"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/time"
	            android:layout_marginTop="5dp"
	            android:textColor="#999999"
	            android:textSize="12sp" />
	
	    </LinearLayout>
	</LinearLayout>
    <LinearLayout android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:orientation="horizontal" > 
		  
		    <Button android:id="@+id/retweet"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:textSize="13sp"
		        android:textStyle="bold"
		        android:textColor="#FFFFFF"
		        android:background="@drawable/updatebtnbg"
		        android:text="@string/retweet" /> 
		  
		    <Button android:id="@+id/reply"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:layout_marginLeft="15dp"
		        android:textSize="13sp"
		        android:textStyle="bold"
		        android:textColor="#FFFFFF"
		        android:background="@drawable/updatebtnbg"
		        android:text="@string/reply" /> 
	</LinearLayout>
</LinearLayout>
