<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="3dp"
    android:paddingRight="3dp"
   	android:background="#333333"
    android:paddingBottom="5dp"
    android:orientation="vertical" >
    <ImageView android:id="@+id/homebtn"
			android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:src="@drawable/home"
	        android:background="@drawable/tweetbtnbg"
	        android:contentDescription="@string/app_name" /> 
  
    <TextView android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/note"
	    android:textColor="#ffffff" /> 
	  
	<EditText android:id="@+id/tweettext"
	    android:inputType="text"
    	android:background="#ffffff"
	    android:layout_width="fill_parent"
	    android:layout_height="50dp"
	    android:lines="5"
	    android:singleLine="false" /> 
	  
	<Button android:id="@+id/dotweet"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/tweetbtnbg"
	    android:text="@string/send"
	    android:textColor="#ffffff"
	    android:textStyle="bold" />
</LinearLayout>